--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.13",
-    "sillyname": "^0.1.0"
+    "sillyname": "^0.1.0",
+    "socket.io": "^2.1.1"
   }
 }
