Upgraded some package and add the socket.io-client package

--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,20 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel index.html --hmr-port 35585"
+    "dev": "parcel index.html --hmr-port 35585",
+    "build": "parcel build src/index.html --public-url ./"
   },
   "author": "Felix Fong <felix@felixfong227.ml> (https://felixfong227.ml)",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^3.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "parcel-bundler": "1.5.1",
     "prop-types": "^15.6.2",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "socket.io-client": "^2.1.1"
   }
 }
